# voicetypr

./: .env.example  .gitignore  .prettierignore  .release-it.json  .stores.json  AGENTS.md  CHANGELOG.md  CLAUDE.md  IMPLEMENTATION_PLAN.md  LICENSE.md  MICROSOFT_STORE_LAUNCH.md  ORACLE_REVIEW.md  PARAKEET_SWIFT_INTEGRATION.md  README.md  SECURITY_ANALYSIS_VALIDATED.md  TOAST_POSITIONING_EXPLAINED.md  TRANSCRIPTION_DEBUG.md  beads-watch.sh  components.json  eslint.config.cjs  index.html  logs.txt  package.json  pill.html  pnpm-lock.yaml  pnpm-workspace.yaml  toast.html  tsconfig.json  vite.config.ts  vitest.config.ts
sidecar/parakeet/: .gitignore  pyproject.toml
sidecar/whisper-vulkan/: Cargo.toml
sidecar/whisper-vulkan/src/: main.rs
src-tauri/: Cargo.toml  Info.plist  SENTRY_FIX_EXAMPLE.md  SENTRY_ISSUES_REPORT.md  build.rs  run-tests.ps1  tauri.conf.json  tauri.dev.conf.json  tauri.macos.conf.json  tauri.windows.conf.json  tauri.windows.store.conf.json  voicetypr.desktop
src-tauri/.cargo/: config.toml
src-tauri/capabilities/: default.json  linux.json  macos.json  windows.json
src-tauri/catalog/: SOURCE.md  catalog.generated.json  generate.py  models.dev.snapshot.json  overlay.json
src-tauri/crates/keytrigger/: Cargo.toml
src-tauri/icons/: icon.icns
src-tauri/msix/: Package.appxmanifest
src-tauri/src/: cli.rs  debug_transcription.rs  lib.rs  main.rs  provider_capabilities.rs  secure_store.rs  simple_cache.rs  state_machine.rs  telemetry.rs  transcription.rs  window_manager.rs  writing.rs
src-tauri/src/ai/: anthropic.rs  catalog.rs  config.rs  contract.rs  error.rs  executor.rs  gemini.rs  genai_runtime.rs  groq.rs  mod.rs  openai.rs  openai_compatible.rs  prompts.rs  providers.rs  runtime_tests.rs  tests.rs
src-tauri/src/audio/: converter.rs  converter_tests.rs  device_watcher.rs  level_meter.rs  mod.rs  normalizer.rs  normalizer_tests.rs  recorder.rs  recorder_watchdog.rs  resampler.rs  silence_detector.rs  validator.rs
src-tauri/src/cloud_stt/: cohere.rs  common.rs  deepgram.rs  groq.rs  mod.rs  openai.rs  soniox.rs
src-tauri/src/commands/: ai.rs  audio.rs  cli_tool.rs  clipboard.rs  debug.rs  device.rs  distribution.rs  key_normalizer.rs  keyring.rs  license.rs  logs.rs  mod.rs  model.rs  permissions.rs  remote.rs  reset.rs  settings.rs  shortcuts.rs  stt.rs  system_info.rs  telemetry.rs  test_sentry.rs  text.rs  utils.rs  window.rs
src-tauri/src/ffmpeg/: mod.rs
src-tauri/src/formatting/: messages.rs  mod.rs  sidecar.rs
src-tauri/src/license/: api_client.rs  device.rs  keychain.rs  mod.rs  types.rs
src-tauri/src/media/: controller.rs
src-tauri/src/menu/: mod.rs  tray.rs
src-tauri/src/parakeet/: error.rs  manager.rs  messages.rs  mod.rs  models.rs  sidecar.rs
src-tauri/src/recognition/: mod.rs  model_selection.rs
src-tauri/src/recording/: escape_handler.rs  hotkeys.rs  mod.rs
src-tauri/src/remote/: client.rs  concurrent_tests.rs  discovery.rs  http.rs  integration_tests.rs  lifecycle.rs  mod.rs  model_control.rs  (+3 more)
src-tauri/windows/: assert-no-vulkan-import.ps1  gpu-installer-hooks.nsh  installer-hooks.nsh  smart-installer-hooks.nsh
(+361 files in other folders)
