[package]
name = "voicetypr"
version = "0.1.0"
description = "A Tauri App"
authors = ["moinulmoin"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "voicetypr_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["macos-private-api", "tray-icon"] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
whisper-rs = "0.14.3"
cpal = "0.16.0"
hound = "3.5.1"
futures-util = "0.3.31"
tokio = { version = "1.46.0", features = ["full"] }
reqwest = { version = "0.12.22", features = ["json", "stream"] }
enigo = "0.5.0"
sha2 = "0.10.9"
sha1 = "0.10.6"
arboard = "3.6.0"

[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tauri-plugin-fs = "2"
tauri-plugin-global-shortcut = "2"
tauri-plugin-mic-recorder = "2"
tauri-plugin-shell = "2"
tauri-plugin-dialog = "2"
tauri-plugin-store = "2"

